After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733615 - decodebin: Changing state of a playbin pipeline intensively segfault with several formats
decodebin: Changing state of a playbin pipeline intensively segfault with sev...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-23 17:09 UTC by Thibault Saunier
Modified: 2014-07-23 17:52 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Thibault Saunier 2014-07-23 17:09:36 UTC
You can for example look at:

https://jenkins.arracacha.collabora.co.uk/view/pitivi/job/gst-validate-tests/757/testReport/validate.file.playback/change_state_intensive/mp3_h264_0_mp4/

This can be reproduced doing doing:

gst-validate-1.0  playbin uri=file:///home/thiblahute/gst-validate/gst-qa-assets/medias/mp4/raw_h264.0.mp4 --set-scenario change_state_intensive

This same test works reliably with Gst 1.4 so I think it has been introduced around:

commit c051b378d7405d41b0de096cf64451a667864acc
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Tue Jul 15 17:23:24 2014 +0200

    uridecodebin: Create new sources after chaining up to the parent class
    
    Otherwise we start the new sources already before the parent class
    got ready to start.

And following related commits.
Comment 1 Sebastian Dröge (slomo) 2014-07-23 17:52:21 UTC
commit f173fa15b19b735b4aa727015c58a177c0b28803
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Wed Jul 23 19:51:36 2014 +0200

    decodebin: Don't unref caps for which we don't own a reference... get one first
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733615